--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,32 +6,32 @@ on:
     branches: [ "main" ]
 
 env:
-  CONFLUENT_CLOUD_API_KEY: ${{ secrets. }}
-  CONFLUENT_CLOUD_API_SECRET: ${{ secrets. }}
-  AWS_ACCESS_KEY_ID: ${{ secrets. }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets. }}
-  TF_STATE_BUCKET_NAME: ${{ secrets. }}
+  CONFLUENT_CLOUD_API_KEY: ${{ secrets.CONFLUENT_CLOUD_API_KEY }}
+  CONFLUENT_CLOUD_API_SECRET: ${{ secrets.CONFLUENT_CLOUD_API_SECRET }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  TF_STATE_BUCKET_NAME: ${{ secrets.AWS_TF_STATE_BUCKET_NAME }}
   
 jobs:
   deploy-infra:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
       - name: setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_wrapper: false
       - name: Terraform init
         id: init
-        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME" -backend-config="region=us-east-1"
+        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME" -backend-config="region=us-west-2"
         working-directory: ./terraform
       - name: Terraform Plan
         id: plan
         run: |-
           terraform plan \  
-          -var="confluent_cloud_api_key=$confluent_cloud_api_key"
-          -var="confluent_cloud_api_secret=$confluent_cloud_api_secret"
+          -var="confluent_cloud_api_key=$CONFLUENT_CLOUD_API_KEY"
+          -var="confluent_cloud_api_secret=$CONFLUENT_CLOUD_API_SECRET"
           -out=PLAN
         working-directory: ./terraform
       - name: Terraform Apply
