--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,7 +28,7 @@ jobs:
         working-directory: ./terraform
       - name: Terraform Plan
         id: plan
-        run: |-
+        run: |
           terraform plan \  
           -var='confluent_cloud_api_key=$CONFLUENT_CLOUD_API_KEY' \
           -var='confluent_cloud_api_secret=$CONFLUENT_CLOUD_API_SECRET' \
